[tool.poetry]
name = "dagster_capstone"
version = "0.1.0"
description = ""
authors = ["Nik Walne <nicholas.walne@oxfordhealth.nhs.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.5.9"
dagster-duckdb = "^0.21.9"
duckdb = "^0.9.2"

[tool.poetry.dev-dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
